k8s/django/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      component: django
  template:
    metadata:
      labels:
        component: django
    spec:
      containers:
        - name: django
          image: it21998/mydjangoapp
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
